Fix sidebar text overlap

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ html .abs { position: absolute; }
 .scroll { overflow-y: auto; }
 .centered { margin-left: auto; margin-right: auto; }
 .bb { box-sizing: border-box; }
+.layer { transform: translateZ(0); }
 
 /* Typography */
 html, table, .serif { font-family: 'Source Serif Pro', serif; font-size: 16px; line-height: 24px; }
@@ -98,6 +99,7 @@ html, .black { color: #333; }
 .red-bg { background: #e46; }
 .white { color: #fff; }
 .white-bg { background: #fff; box-shadow: #fff 0 10px 20px; transform: translateZ(0); }
+.white-bg-top { background: #fff; box-shadow: #fff 0 -10px 20px; transform: translateZ(0); }
 
 /* Markdown */
 h1, h2, h3, h4, h5, h6 { font-weight: 700; }
@@ -118,3 +120,6 @@ p, table { margin: 8px 0; }
 hr { border: none; border-top: 1px solid #eee; margin: 24px 0; }
 td { border-top: 1px solid #eee; margin: 0; padding: 4px 8px; }
 blockquote { border-left: 3px solid #eee; padding-left: 13px; margin: 16px 0; color: #888; }
+
+/* Debug */
+.debug { outline: 1px solid red; }
